force-app/main/default/objects/Lead/fields/Demo_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_Time__c</fullName>
    <label>Demo Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>