force-app/main/default/objects/Lead/fields/Demo_Status__c.field-meta.xml
<CustomField>
    <fullName>Demo_Status__c</fullName>
    <label>Demo Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
                <isActive>false</isActive>
                <label>Rescheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>