force-app/main/default/objects/Lead/fields/Demo_test_2__c.field-meta.xml
<CustomField>
    <fullName>Demo_test_2__c</fullName>
    <label>Demo test 2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>