force-app/main/default/objects/Lead/fields/Demo_test__c.field-meta.xml
<CustomField>
    <fullName>Demo_test__c</fullName>
    <label>Demo test</label>
    <length>32</length>
    <type>Text</type>
</CustomField>