force-app/main/default/objects/Lead/fields/Demo_Zoom_Link__c.field-meta.xml
<CustomField>
    <fullName>Demo_Zoom_Link__c</fullName>
    <label>Demo Zoom Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>