force-app/main/default/objects/Lead/fields/Demo_Zoom_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Demo_Zoom_Meeting_ID__c</fullName>
    <label>Demo Zoom Meeting ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>