force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Demo_Date_Time__c</columns>
    <columns>Demo_Status__c</columns>
    <columns>Demo_Zoom_Meeting_ID__c</columns>
    <columns>Demo_Zoom_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>closed</value>
    </filters>
    <label>All Open Leads</label>
</ListView>